


namespace DoofesZeug.Models
{
    public abstract class EntityBase
    {
    }
}
